--- a/home/templates/main/home.html
+++ b/home/templates/main/home.html
@@ -19,4 +19,16 @@
             </form>
         </div>
     </div>
+    <div>
+        <ul>
+            {% for labmanual in labmanuals %}
+                <li>
+                    {{labmanual}}
+                    <button name="view" onclick="location.href ='{% url 'mainsite:viewlab' labmanual.id %}'">VIEW</button>
+                </li>
+                {% empty %}
+                    <li>No Lab Manual Found</li>
+            {% endfor %}
+        </ul>
+    </div>
 {% endblock %}
