--- a/home/templates/main/editlab.html
+++ b/home/templates/main/editlab.html
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block body %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/editlab.css' %} ? {% now 'U' %}" />
     <div>
         
     </div>
